--- a/src/src.csproj
+++ b/src/src.csproj
@@ -2,6 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>Luca.Cloud</PackageId>
+    <Version>0.1.0</Version>
+    <Authors>Tim Hanewich</Authors>
+    <Product>Luca.Cloud</Product>
+    <Description>Peripheral library for accessing financial statements, delegating generation to the cloud (using the Luca API service).</Description>
+    <Copyright>Tim Hanewich</Copyright>
+    <PackageIcon>Luca.jpg</PackageIcon>
+    <RepositoryUrl>https://github.com/TimHanewich/Luca.Cloud</RepositoryUrl>
+    <PackageProjectUrl>https://timhanewich.github.io/luca.html</PackageProjectUrl>
+    <PackageTags>financial statement,sec,investing,stocks</PackageTags>
+    <AssemblyVersion>0.0.0.0</AssemblyVersion>
+    <FileVersion>0.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,6 +21,13 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SecuritiesExchangeCommission.Edgar" Version="2.0.3" />
     <PackageReference Include="Xbrl" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Luca.jpg">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
